# packedlink.com

./: .gitignore  .stylelintrc.json  AGENTS.md  CONTRIBUTING.md  GEMINI.md  Justfile  PROJECT_STRUCTURE.md  README.md
.claude/agents/: README.md  designer.md  feedback-analizi.md  fullstack-developer.md  icerik-yazari.md  lorem-ipsum-test.md  qa-master.md  workflow-orchestrator.md  zen-bekcisi.md
.github/workflows/: test.yml
docs/: README.md  focus.md  project-structure.md  vision.md  zen.md
docs/deployment/: guide.md
docs/design/: button-colors-decision.md
docs/development/: agent-system-improvements.md  ai-contribution-guide.md  ai-katki-rehberi.md  css-guide.md  design-token-migration-audit.md  designer-validation-checklist.md  getting-started.md  github-workflow.md  storybook-setup.md
docs/marketing/: analytics-strategy.md  analytics_strategy.md  brand-voice.md  seo-content-strategy.md  seo_content_strategy.md
docs/product/: competitive-analysis.md  design-guide.md  features.md  personas.md
docs/product/phases/: 1.md
docs/specs/: builder-page-design-spec.md
docs/tasks/: 1.pending.md
docs/technical/: blog-system.md  tech-stack.md  technical-decisions.md  technical_decisions.md
scripts/: validate-design-tokens.sh
src/backend/: .env.example  pyproject.toml
src/backend/blog/: admin.py  api.py  models.py  schemas.py
src/backend/blog/migrations/: 0001_initial.py
src/backend/blog/tests/: test_api.py  test_models.py
src/backend/config/: api.py  settings.py  simple_env.py  urls.py
src/backend/lists/: admin.py  apps.py  forms.py  models.py  posthog.py  urls.py  views.py
src/backend/lists/management/commands/: expire_lists.py
src/backend/lists/migrations/: 0001_initial.py
src/backend/lists/tests/: test_health.py  test_publish_flow.py
src/backend/templates/: base.html
src/backend/templates/lists/: builder.html  public_detail.html  publish.html  publish_success.html  start.html
src/frontend/: .env.local.example  .stylelintrc.json  package-lock.json  package.json  tsconfig.tsbuildinfo
src/frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
src/frontend/app/blog/: loading.tsx  page.module.css  page.tsx
src/frontend/app/builder/: page.module.css  page.tsx
src/frontend/components/: README.md
src/frontend/lib/: api.ts  env.ts  formatDate.ts  mockLists.ts
src/frontend/store/: listBuilder.ts
src/tests/: conftest.py  pyproject.toml  test_orchestrator.py
src/tests/features/: list_creation.feature
src/tests/step_defs/: test_list_creation.py  test_simple.py
(+42 files in other folders)
