[project]
name = "kaydet-backend"
version = "0.1.0"
description = "PackedLink backend (Django)"
requires-python = ">=3.10"
dependencies = [
    "Django>=5.0,<6.0",
    "django-environ>=0.11,<0.12",
    "shortuuid>=1.0,<2.0",
    "posthog>=3.4,<4.0",
    "django-ninja>=1.5.0",
    "markdown2>=2.5.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-django>=4.9,<5.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["blog", "lists", "config"]

[tool.uv]
package = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["."]
addopts = "-q"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
]
